2011-01-31  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Dan Bernstein.

        Tests that a removed svg style element is not accessed again in document's
        style recalc code and does not result in crash.
        https://bugs.webkit.org/show_bug.cgi?id=53441

        * fast/css/stylesheet-candidate-nodes-crash-expected.txt: Added.
        * fast/css/stylesheet-candidate-nodes-crash.xhtml: Added.

2011-02-01  Dimitri Glazkov  <dglazkov@chromium.org>

        More flakiness updates.

        * platform/chromium/test_expectations.txt: Moar flakiness recorded.

2011-02-01  Dimitri Glazkov  <dglazkov@chromium.org>

        Updated flaky test expectations according to build bot results.

        * platform/chromium/test_expectations.txt: Flakiness recorded.

2011-02-01  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed.

        fast/loader/onload-policy-ignore-for-frame.html fails on Qt bot
        https://bugs.webkit.org/show_bug.cgi?id=53490

        Add Qt specific expected result.

        * platform/qt/fast/loader/onload-policy-ignore-for-frame-expected.txt: Copied from LayoutTests/fast/loader/onload-policy-ignore-for-frame-expected.txt.

2011-02-01  Yury Semikhatsky  <yurys@chromium.org>

        Unreviewed. Rollout r77230 which caused many layout tests
        crashes on Chromium Debug bots.

        Async event handlers should not fire within a modal dialog
        https://bugs.webkit.org/show_bug.cgi?id=53202

        * fast/events/scroll-event-during-modal-dialog-expected.txt: Removed.
        * fast/events/scroll-event-during-modal-dialog.html: Removed.

2011-02-01  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by James Robinson.

        Async event handlers should not fire within a modal dialog
        https://bugs.webkit.org/show_bug.cgi?id=53202
        
        Add tests for a scroll event triggered right before a modal dialog is
        shown.
