@@ -1,3 +1,10 @@
+2011-02-01  Mihai Parparita  <mihaip@chromium.org>
+
+        Unreviewed. Include actual values in fast/canvas/webgl/gl-teximage.html
+        (removed by r77129) in the case of failure.
+
+        * fast/canvas/webgl/gl-teximage.html:
+
 2011-01-31  Abhishek Arya  <inferno@chromium.org>
 
         Reviewed by Dan Bernstein.
